--- a/config/database.yml
+++ b/config/database.yml
@@ -16,8 +16,8 @@
 #
 default: &default
   # CUSTOM: Commenting out since 'postgresql' deployment to Render.com doesn't even work:
-  # adapter: postgresql
-  adapter: sqlite3
+  adapter: postgresql
+  # adapter: sqlite3
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
